<resources>
    <string name="date_with_placeholders" translatable="false">%02d.%02d.%02d</string>
    <string name="exit_account">Sign out</string>
    <string name="close_window">Close window</string>
    <string name="sure_exit_account">Are you sure to sign out?</string>
    <string name="confirm">Confirm</string>
    <string name="deleting_account_title">Account deletion</string>
    <string name="enter_pass_2_confirm">Type your password for confirmation</string>
    <string name="pass">Password</string>
    <string name="go_back">Back</string>
    <string name="black_list">Blacklist</string>
    <string name="uncheck_everyone">Unselect all</string>
    <string name="settings">Settings</string>
    <string name="own_profile">Profile</string>
    <string name="current_location">Precisely</string>
    <string name="approx_location">Approximately</string>
    <string name="date_of_birth">Birthdate</string>
    <string name="privacy">Location privacy</string>
    <string name="change_pass">Change password</string>
    <string name="log_out">Sign out</string>
    <string name="delete_account">Delete account</string>
    <string name="change_language">Language</string>
    <string name="fix_location">Fixed</string>
    <string name="unselect_all">Select all</string>
    <string name="password_changed_successfully">You have successfully changed your password!</string>
    <string name="password_is_incorrect">Wrong password!</string>
    <string name="fields_must_not_be_empty">Fields must not be blank!</string>
    <string name="passwords_are_not_similar">Passwords do not match!</string>
    <string name="new_password_is_similar">New password is the same as the previous one!</string>
    <string name="password_cannot_be_empty">Password can not be blank!</string>
    <string name="incorrect_pass">Wrong password!</string>
    <string name="close_popup">Close dialog</string>
    <string name="your_friend">Your friend</string>
    <string name="set_a_tick">Select</string>
    <string name="tick_is_set">Selected</string>
    <string name="change_password_title">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="new_password_again">Repeat new password</string>
    <string name="blacklist_is_empty">Blacklist is empty. Well done!</string>
    <string name="privacy_no_friends">You have no one to hide your location from - let\'s find friends first!</string>
    <string name="name_and_surname">Name and surname</string>
    <string name="connection_error">Lost connection…</string>
    <string name="failed_to_take_action">Could not perform such action…</string>
    <string name="pick_user_to_change_privacy">Choose those users who you would not like to allow to see your location</string>
    <string name="failed_to_change_avatar">Failed to change avatar…</string>
    <string name="failed_to_change_birth_date">Failed to change birth date…</string>
    <string name="failed_to_change_password">Failed to change password…</string>
    <string name="failed_to_delete_account">Failed to delete account…</string>
    <string name="name_surname" translatable="false">%s %s</string>
    <string name="ru" translatable="false">ru</string>
    <string name="en" translatable="false">en</string>
</resources>