<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:layout_marginHorizontal="35dp"
    android:isScrollContainer="true"
    android:paddingBottom="4dp">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/bs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:id="@+id/content"
            style="@style/Widget.Material3.BottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:orientation="vertical"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                android:id="@+id/drag_handle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:theme="@style/Theme.FLocator.DragHandle" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TextView
                    android:id="@+id/settings_change_password_popup_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/change_password_title"
                    android:textColor="@color/tint"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <FrameLayout
                    android:id="@+id/change_password_close_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:padding="10dp"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/settings_change_password_popup_title"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/close_popup"
                        android:src="@drawable/close_popup_image" />
                </FrameLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFF"
                android:hint=""
                android:paddingHorizontal="20dp"
                android:paddingVertical="4dp"
                android:textColorHint="#CECECE"

                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/change_pass_old_pass"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:background="@drawable/popup_input_bg_image"
                    android:hint="@string/old_password"
                    android:inputType="textPassword"
                    android:padding="0dp"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFF"
                android:hint=""
                android:paddingHorizontal="20dp"
                android:paddingVertical="4dp"
                android:textColorHint="#CECECE"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/change_pass_new_pass"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:background="@drawable/popup_input_bg_image"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:padding="0dp"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FFF"
                android:hint=""
                android:paddingHorizontal="20dp"
                android:paddingVertical="4dp"
                android:textColorHint="#CECECE"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/change_pass_new_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:background="@drawable/popup_input_bg_image"
                    android:hint="@string/new_password_again"
                    android:inputType="textPassword"
                    android:padding="0dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/change_pass_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/change_pass"
                    android:textColor="#ee0000"
                    android:visibility="invisible">

                </TextView>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/change_pass_confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/tint"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="#FFF"
                android:textSize="16sp"
                app:cornerRadius="9dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>